# A3-RasterizationProject

./: .gitignore  CMakeLists.txt
include/: Camera.hpp  Matrix.hpp  MeshCube.hpp  PPM.hpp  Render.hpp  Triangle.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
output/: sample1.ppm  sample2.ppm  sample3.ppm
output/pretest1/: pretest1.ppm
output/pretest2/: pretest2.ppm
output/pretest3/: final_ssaa.ppm  no_ssaa.ppm
scripts/: build.bat  run.bat
src/: Camera.cpp  Matrix.cpp  MeshCube.cpp  PPM.cpp  Render.cpp  Triangle.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  main.cpp
tests/: pretest1.cpp  pretest2.cpp  pretest3.cpp
